# $Id$

2006-10-18	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveImage.class.php: big images' handling
	fixed.

2006-10-07	Konstantin V. Arkhipov

	* meta/: dropped support of <property identifier="true" ... />; use
	<identifier ... /> now.

2006-10-06	Anton E. Lebedevich

	* main/Base/ObjectsTree.class.php: removed.

2006-10-06	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: added ability to override
	column names for properties.

2006-10-05	Anton E. Lebedevich

	* main/Flow/FilterController.class.php: removed.

2006-10-05	Konstantin V. Arkhipov

	* meta/builders/AutoDaoBuilder.class.php: public constructor's
	generation fixed.

2006-10-04	Konstantin V. Arkhipov

	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
	on integer's with leading zeros now.

2006-10-02	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: do not generate unsupported
	relations in schema.

2006-09-29	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php, main/DAOs/StorableDAO.class.php:
	backwards compatibility introduced for 0.2-style pseudo-mappings.

2006-09-28	Konstantin V. Arkhipov

	* main/Base/ObjectsTree.class.php: ressurected.

2006-09-27	Konstantin V. Arkhipov

	* meta/: 'source link' support in DAO's implemented.

	* core/DB/DBPool.class.php: new way for handling multi-DB's projects.

2006-09-26	Konstantin V. Arkhipov

	* meta/builders/SchemaBuilder.class.php: handling of property-less
	classes fixed too.

	* meta/builders/AutoDaoBuilder.class.php: fixed bug with inherited
	property-less DAO's.

2006-09-25	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: corrected handling of
	parent's identifiers (if any).

	* meta/builders/ProtoClassBuilder.class.php: inheritance support
	implemented, useless constructor and private property dropped.

	* core/OSQL/TruncateQuery.class.php,
	test/core/TruncateQueryTest.class.php: single table handling fixed,
	test updated.
