@@ -2,6 +2,8 @@
 
 2006-10-18	Konstantin V. Arkhipov
 
+	* meta/: column support for identifiers.
+
 	* core/Form/Primitives/PrimitiveImage.class.php: big images' handling
 	fixed.
 
